--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync start -s -f index.html src --no-ui --no-notify"
+    "start": "browser-sync start -s -f index.html src --no-ui --no-notify --port 4000"
   },
   "repository": {
     "type": "git",
